style.css
/* ============= */
/* INITIAL SETUP */
/* ============= */
:root {
  --mango-tango: #EC7801;
}

* {
  font-family: 'Raleway', Arial, sans-serif;
}

@font-face {
  font-family: 'Raleway';
  src: url('assets/fonts/Raleway-Regular.ttf') format('truetype');
}

body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

/* ==================== */
/* REUSEABLE COMPONENTS */
/* ==================== */
section {
  margin-bottom: 20vh;
}

.section-header {
  text-align: center;
  font-size: 30px;
  letter-spacing: 4px;
  text-transform: uppercase;
  margin: 0 auto 2.5vh;
  position: relative;
}

.section-header-underline {
  width: 100px;
  background-color: var(--mango-tango);
  margin: 0 auto 5vh;
  border: 2px solid var(--mango-tango);
}

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

/* ============== */
/* HEADER SECTION */
/* ============== */
header {
  height: 100vh;
  margin-bottom: 20vh;
}

.header-image {
  width: 100%;
  height: 100%;
  filter: brightness(50%);
  background-image: cover;
}

.header-text {
  color: white;
  font-size: 3em;
}

.header-container {
  width: 100%;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* ================ */
/* FEATURES SECTION */
/* ================ */
.feature-container {
  display: flex;
  justify-content: space-evenly;
  width: 100%;
  padding: 2.5vw;
}

.feature-item {
  margin: 2.25vw;
  opacity: 0;
  transition: opacity 500ms ease-in;
}

.feature-item.appear {
  opacity: 1;
}

.feature-icon {
  color: var(--mango-tango);
  float: left;
}

.feature-header {
  position: relative;
  letter-spacing: 2.5px;
  top: 2.5px;
  left: 15px;
}

.feature-description {
  letter-spacing: 1.5px;
  line-height: 1.5;
  font-size: 13.5px;
}

/* ================ */
/* DOWNLOAD SECTION */
/* ================ */
.download-button {
  color: white;
  font-size: 20px;
  background-color: transparent;
  width: 300px;
  height: 50px;
  outline: none;
  border: 2px solid var(--mango-tango);
  border-radius: 10px;
  transition: 0.5s;
}

.download-button:hover {
  cursor: pointer;
  background-color: var(--mango-tango); 
}

.download-container {
  display: flex;
  width: 100%;
}

.download-option {
  flex: 1;
  text-align: center;
  padding: 10px 10px;
  -webkit-transform: translateX(-200px);
  transform: translateX(-200px);
  transition: opacity 750ms ease-in, transform 750ms ease-in, background-color 0.5s ease-in-out;
  opacity: 0;
}

.download-option.appear {
  -webkit-transform: translateX(0px);
  transform: translateX(0px);
  opacity: 1;
}

.download-option:hover {
  cursor: pointer;
  background-color: gray;
}

.download-option-heading {
  margin-bottom: 0;
}

.download-logo {
  width: 100%;
  max-width: 50px;
  height: auto;
}

/* =============== */
/* CONTACT SECTION */
/* =============== */
/* .form-container {
  display: grid;
  grid-template-columns: repeat(2, 45%);
  justify-content: center;
  width: 100%;
}

.form-container-child {
  text-align: center;
  width: 100%;
  height: 100%;
}

.form-field {
  outline: 0;
  border-radius: 5px;
  padding: 12px 20px;
  opacity: 0.8;
  box-sizing: border-box;
  border-color: var(--mango-tango);
  letter-spacing: 1.5;
  resize: none;
}

.name-field {
  width: 85%;
  margin: 6px 0;
}

.email-field {
  width: 85%;
  margin: 6px 0;
}

.message-field {
  width: 90%;
  height: 100%;
  border-width: 2px;
  margin-left: 10%;
}

.submit-button-container {
  display: flex;
  justify-content: center;
  width: 100%;
}

.submit-button {
  color: black;
  font-size: 17px;
  background-color: transparent;
  width: 90%;
  height: 50px;
  outline: none;
  border: 2px solid var(--mango-tango);
  border-radius: 10px;
  transition: 0.5s ease-in-out;
}

.submit-button:hover {
  cursor: pointer;
  color: white;
  background-color: var(--mango-tango); 
} */

.form-container {
  display: flex;
  width: 100%;
  column-gap: 5%;
  justify-content: center;
  align-items: center;
  margin-bottom: 2%;
}

.form-container-child {
  text-align: center;
  width: 100%;
  height: 100%;
}

.form-field {
  outline: none;
  border-radius: 5px;
  padding: 12px 20px;
  opacity: 0.8;
  border-color: var(--mango-tango);
  letter-spacing: 1.5;
  width: 65%;
  resize: none;
}

.name-field {
  margin: 2.5% 0; 
}

.email-field {
  margin: 2.5% 0; 
}

.message-field {
}

.submit-button-container {
  display: flex;
  justify-content: center;
  width: 100%;
}

.submit-button {
  color: black;
  font-size: 17px;
  background-color: transparent;
  width: 90%;
  height: 50px;
  outline: none;
  border: 2px solid var(--mango-tango);
  border-radius: 10px;
  transition: 0.5s ease-in-out;
}

.submit-button:hover {
  cursor: pointer;
  color: white;
  background-color: var(--mango-tango); 
}

/* ====== */
/* FOOTER */
/* ====== */
footer {
  background-color: black;
  width: 100%;
  height: 200px;
}

/* ===== */
/* OTHER */
/* ===== */

